[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-queue"
version = "0.1.0"
description = "Priority queue for sub-tasks in agent loops — enqueue, dequeue, complete, fail, retry. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "task-queue", "priority-queue"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-task-queue"

[tool.setuptools.packages.find]
where = ["src"]
